inline schemas
